--- a/fleetman-api-gateway-deployment.yaml
+++ b/fleetman-api-gateway-deployment.yaml
@@ -38,7 +38,7 @@ spec:
       containers:
         - env:
             - name: SPRING_PROFILES_ACTIVE
-              value: local-microservice
+              value: production-microservice
           image: supinfo4kube/api-gateway:1.0.1
           name: fleetman-api-gateway
           ports:
